--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Inorg &middot; Bisect</title>
+    <title>Inorg &middot; Bisect (beta)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -80,15 +80,15 @@
 
       /* Tree Coloring */
       .tree-top {
-        background-color:#eee;
-      }
-
-      .tree-mid {
         background-color:#ccc;
       }
 
+      .tree-mid {
+        background-color:#aaa;
+      }
+
       .tree-bot {
-        background-color:#999;
+        background-color:#777;
       }
 
       /* ******************************************************************* */
@@ -118,7 +118,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="muted">Inorg Bisect</h3>
+        <h3 class="muted">Inorg Bisect <small>(beta)</small></h3>
       </div>
 
       <hr>
@@ -130,6 +130,8 @@
         <a class="btn btn-large btn-success" href="#">Sign up today</a>
       </div>
 
+      <hr>
+      <div id="t-tmpl-r3-test"></div>
       <hr>
 
       <!-- View in nested rows -->
@@ -247,8 +249,6 @@
       </div>
       <!-- END -->
       <hr>
-      <div id="t-tmpl-r3-test"></div>
-      <hr>
       <div class="footer">
         <p>&copy; Inorg.org 2013</p>
       </div>
@@ -259,7 +259,7 @@
     ================================================== -->
     <script type="text/template" id="tmpl-tree-rooted">
       <div id={{tree.id}}>
-        <h3>{{tree.head}} <small>{{tree.desc}}</small></h3>
+        <h2>{{tree.head}} <small>{{tree.desc}}</small></h2>
 
         {{#with nodes}}
         <div class="row-fluid">
