--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -71,6 +71,7 @@
       .on-edit{
         display: none;
       }
+
       /* Node Formatting */
       .node-empty {
         border: dashed 3px black;
@@ -105,6 +106,34 @@
         background-color:#777;
       }
 
+      .img-bisect {
+        position: relative;
+        top:40px;
+        display: inline-block;
+        width: 75px;
+        height: 75px;
+        margin-top: 1px;
+        *margin-right: .3em;
+        vertical-align: text-top;
+        background-image: url("/img/bisect.svg");
+        background-position: 0px 0px;
+        background-repeat: no-repeat;
+      }
+
+      .img-minus {
+        position: relative;
+        top:40px;
+        display: inline-block;
+        width: 75px;
+        height: 75px;
+        margin-top: 1px;
+        *margin-right: .3em;
+        vertical-align: text-top;
+        background-image: url("/img/bisect.svg");
+        background-position: -75px 0px;
+        background-repeat: no-repeat;
+      }
+
       /* ******************************************************************* */
     </style>
     <link href="/bs/css/bootstrap-responsive.css" rel="stylesheet">
@@ -115,11 +144,11 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="/assets/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="/img/favicon.ico">
   </head>
 
   <body>
