--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -45,7 +45,7 @@
       .marketing p + h4 {
         margin-top: 28px;
       }
-      
+
       .text-left {
         text-align: left;
       }
@@ -67,19 +67,14 @@
         padding:2px 2px;
       }
 
-      /* */
+      /* Turn on Visibility */
       .on-edit{
         display: none;
       }
 
       /* Node Formatting */
-      .node-empty {
-        border: dashed 3px black;
-        opacity:0.9;
-      }
-
-      .node-empty:hover {
-        opacity:1;
+      .tree-elem-empty {
+        opacity:0;
       }
 
       /* Tree Formatting */
@@ -170,7 +165,7 @@
         <h1>Super Bisection!</h1>
         <p>decisions diagrams to help your users identify the source of
         their issues</p>
-        <a class="btn btn-large btn-success" href="#">Create one Now!</a>
+        <button type="button" class="btn btn-large btn-success">Create one Now!</button>
       </div>
 
       <hr>
@@ -190,7 +185,7 @@
       <hr>
 
       <!-- View in three separate rows -->
-      <!--       
+      <!--
       <div id="t-r3-new">
         <h3>Create a new Bisection</h3>
         <div class="row-fluid">
@@ -238,7 +233,7 @@
 
         {{#with nodes}}
         <div class="row-fluid" data-height="0">
-          <div class="span12 tree-elem tree-top" data-id="n0">
+          <div class="span12 tree-elem tree-top" data-id={{n0.id}}>
             <!--
             <div class="btn-toolbar pull-right">
               <div class="btn-group">
@@ -253,25 +248,37 @@
         </div>
 
         <div class="row-fluid" data-height="1">
-          <div class="span6 tree-elem tree-mid" data-id="n1">
+          <div class="span6 tree-elem tree-mid" data-id={{n1.id}}>
             <h4>{{n1.head}}</h4>
             <p>{{n1.desc}}</p>
             <span class="on-edit">
             {{#if n3}}
-            <button class="btn btn-mini on-del" contenteditable="false"><i class="icon-minus-sign"></i> Delete</button>
+            <button class="btn btn-mini node-rem"
+                    data-add-text='<i class="icon-plus-sign"></i> Add'
+                    data-rem-text='<i class="icon-minus-sign"></i> Remove'
+                    contenteditable="false"><i class="icon-minus-sign"></i> Remove</button>
             {{else}}
-            <button class="btn btn-mini on-add" contenteditable="false"><i class="icon-plus-sign"></i> Add</button>
+            <button class="btn btn-mini node-add"
+                    data-add-text='<i class="icon-plus-sign"></i> Add'
+                    data-rem-text='<i class="icon-minus-sign"></i> Remove'
+                    contenteditable="false"><i class="icon-plus-sign"></i> Add</button>
             {{/if}}
             </span>
           </div>
-          <div class="span6 tree-elem tree-mid" data-id="n2">
+          <div class="span6 tree-elem tree-mid" data-id={{n2.id}}>
             <h4>{{n2.head}}</h4>
             <p>{{n2.desc}}</p>
             <span class="on-edit">
             {{#if n5}}
-            <button class="btn btn-mini on-del" contenteditable="false"><i class="icon-minus-sign"></i> Delete</button>
+            <button class="btn btn-mini node-rem"
+                    data-add-text='<i class="icon-plus-sign"></i> Add'
+                    data-rem-text='<i class="icon-minus-sign"></i> Remove'
+                    contenteditable="false"><i class="icon-minus-sign"></i> Remove</button>
             {{else}}
-            <button class="btn btn-mini on-add" contenteditable="false"><i class="icon-plus-sign"></i> Add</button>
+            <button class="btn btn-mini node-add"
+                    data-add-text='<i class="icon-plus-sign"></i> Add'
+                    data-rem-text='<i class="icon-minus-sign"></i> Remove'
+                    contenteditable="false"><i class="icon-plus-sign"></i> Add</button>
             {{/if}}
             </span>
           </div>
@@ -280,63 +287,59 @@
         <div class="row-fluid" data-height="2">
 
           {{#if n3}}
-          <div class="span3 tree-elem tree-bot" data-id="n3">
+          <div class="span3 tree-elem tree-bot" data-id={{n3.id}}>
             <h4>{{n3.head}}</h4>
             <p>{{n3.desc}}</p>
-            <!-- <a class="btn btn-mini btn-link"><i class="icon-plus-sign"></i></a> -->
           </div>
           {{else}}
-          <div class="span3 tree-elem node-empty tree-bot"
-               data-id="n3" style="display:none;">
+          <div class="span3 tree-elem tree-elem-empty tree-bot"
+               data-id="3">
             <h4>Edit to add question</h4>
             <p>Edit to add a brief description</p>
           </div>
           {{/if}}
 
           {{#if n4}}
-          <div class="span3 tree-elem tree-bot" data-id="n4">
+          <div class="span3 tree-elem tree-bot" data-id={{n4.id}}>
             <h4>{{n4.head}}</h4>
             <p>{{n4.desc}}</p>
-            <!-- <a class="btn btn-mini btn-link"><i class="icon-plus-sign"></i></a> -->
           </div>
           {{else}}
-          <div class="span3 tree-elem node-empty tree-bot"
-               data-id="n4" style="display:none;">
+          <div class="span3 tree-elem tree-elem-empty tree-bot"
+               data-id="4">
             <h4>Edit to add question</h4>
             <p>Edit to add a brief description</p>
           </div>
           {{/if}}
 
           {{#if n5}}
-          <div class="span3 tree-elem tree-bot" data-id="n5">
+          <div class="span3 tree-elem tree-bot" data-id={{n5.id}}>
             <h4>{{n5.head}}</h4>
             <p>{{n5.desc}}</p>
-            <!-- <a class="btn btn-mini btn-link"><i class="icon-plus-sign"></i></a> -->
           </div>
           {{else}}
-          <div class="span3 tree-elem node-empty tree-bot"
-               data-id="n5" style="display:none;">
+          <div class="span3 tree-elem tree-elem-empty tree-bot"
+               data-id="5">
             <h4>Edit to add question</h4>
             <p>Edit to add a brief description</p>
           </div>
           {{/if}}
 
           {{#if n6}}
-          <div class="span3 tree-elem tree-bot" data-id="n6">
+          <div class="span3 tree-elem tree-bot" data-id={{n6.id}}>
             <h4>{{n6.head}}</h4>
             <p>{{n6.desc}}</p>
-            <!-- <a class="btn btn-mini btn-link"><i class="icon-plus-sign"></i></a> -->
           </div>
           {{else}}
-          <div class="span3 tree-elem node-empty tree-bot"
-               data-id="n6" style="display:none;">
+          <div class="span3 tree-elem tree-elem-empty tree-bot"
+               data-id="6">
             <h4>Edit to add question</h4>
             <p>Edit to add a brief description</p>
           </div>
           {{/if}}
         </div>
 
-        <!-- More Sub-Trees as needed       
+        <!-- More Sub-Trees as needed
         <div>
         <div class="row-fluid" data-height="3">
           <div class="span12 tree-elem tree-top" data-id="n100">
