--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -11,19 +11,21 @@
     <link href="/bs/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
-        padding-top: 20px;
-        padding-bottom: 40px;
+        padding-bottom: 20px;
       }
 
       /* Custom container */
       .container-narrow {
         margin: 0 auto;
-        max-width: 700px;
+        max-width: 768px;
       }
       .container-narrow > hr {
         margin: 30px 0;
       }
 
+      .masthead {
+      background: url("/img/grey/grey.png") repeat scroll 0% 0% transparent;
+      }
       /* Main marketing message and sign up button */
       .jumbotron {
         margin: 60px 0;
@@ -38,15 +40,8 @@
         padding: 14px 24px;
       }
 
-      /* Supporting marketing content */
-      .marketing {
-        margin: 60px 0;
-      }
-      .marketing p + h4 {
-        margin-top: 28px;
-      }
-
-      .text-left {
+      /* Missing from BS */
+     .text-left {
         text-align: left;
       }
 
@@ -99,34 +94,6 @@
 
       .tree-bot {
         background-color:#777;
-      }
-
-      .img-bisect {
-        position: relative;
-        top:40px;
-        display: inline-block;
-        width: 75px;
-        height: 75px;
-        margin-top: 1px;
-        *margin-right: .3em;
-        vertical-align: text-top;
-        background-image: url("/img/bisect.svg");
-        background-position: 0px 0px;
-        background-repeat: no-repeat;
-      }
-
-      .img-minus {
-        position: relative;
-        top:40px;
-        display: inline-block;
-        width: 75px;
-        height: 75px;
-        margin-top: 1px;
-        *margin-right: .3em;
-        vertical-align: text-top;
-        background-image: url("/img/bisect.svg");
-        background-position: -75px 0px;
-        background-repeat: no-repeat;
       }
 
       /* ******************************************************************* */
