--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -52,7 +52,8 @@
       .text-center {
         text-align: center;
       }
-      /* ******************************************************************* */
+
+      /* Inorg Specific CSS*/
 
       /* NestedTree Formatting */
       .ntree-elem {
@@ -197,52 +198,65 @@
       <div id={{tree.id}} class="tree">
         <h2>
           <span class="label label-warning pull-right">Modified</span>
-          <span>{{tree.head}} </span>
-          <small>{{tree.desc}}</small>
+          <span class="node-head">{{tree.head}} </span>
+          <small class="node-desc">{{tree.desc}}</small>
         </h2>
 
         {{#with nodes}}
         <div class="row-fluid" data-height="0">
           <div class="span12 tree-elem tree-top" data-id={{n0.id}}>
-            <h4>{{n0.head}}</h4>
-            <p>{{n0.desc}}</p>
+            <h4 class="node-head">{{n0.head}}</h4>
+            <p class="node-desc">{{n0.desc}}</p>
           </div>
         </div>
 
         <div class="row-fluid" data-height="1">
           <div class="span6 tree-elem tree-mid" data-id={{n1.id}}>
+            <!--
+            <div class="media">
+              <span class="label label-warning pull-right">Modified</span>
+              <a class="pull-left" href="#">
+                <img class="media-object" data-src="holder.js/50x75"
+                alt="64x64" style="width: 64px; height: 64px;">
+              </a>
+              <div class="media-body">
+                <h4 class="media-heading">{{n1.head}}</h4>
+                {{n1.desc}}
+              </div>
+            </div>
+            -->
             <span class="label label-warning pull-right">Modified</span>
-            <h4>{{n1.head}}</h4>
-            <p>{{n1.desc}}</p>
+            <h4 class="node-head">{{n1.head}}</h4>
+            <p class="node-desc">{{n1.desc}}</p>
             <span class="on-edit">
             {{#if n3}}
             <button class="btn btn-mini node-rem"
                     data-add-text='<i class="icon-plus-sign"></i> Add'
                     data-rem-text='<i class="icon-minus-sign"></i> Remove'
-                    contenteditable="false"><i class="icon-minus-sign"></i> Remove</button>
+                    ><i class="icon-minus-sign"></i> Remove</button>
             {{else}}
             <button class="btn btn-mini node-add"
                     data-add-text='<i class="icon-plus-sign"></i> Add'
                     data-rem-text='<i class="icon-minus-sign"></i> Remove'
-                    contenteditable="false"><i class="icon-plus-sign"></i> Add</button>
+                    ><i class="icon-plus-sign"></i> Add</button>
             {{/if}}
             </span>
           </div>
           <div class="span6 tree-elem tree-mid" data-id={{n2.id}}>
             <span class="label label-warning pull-right"></span>
-            <h4>{{n2.head}}</h4>
-            <p>{{n2.desc}}</p>
+            <h4 class="node-head">{{n2.head}}</h4>
+            <p class="node-desc">{{n2.desc}}</p>
             <span class="on-edit">
             {{#if n5}}
             <button class="btn btn-mini node-rem"
                     data-add-text='<i class="icon-plus-sign"></i> Add'
                     data-rem-text='<i class="icon-minus-sign"></i> Remove'
-                    contenteditable="false"><i class="icon-minus-sign"></i> Remove</button>
+                    ><i class="icon-minus-sign"></i> Remove</button>
             {{else}}
             <button class="btn btn-mini node-add"
                     data-add-text='<i class="icon-plus-sign"></i> Add'
                     data-rem-text='<i class="icon-minus-sign"></i> Remove'
-                    contenteditable="false"><i class="icon-plus-sign"></i> Add</button>
+                    ><i class="icon-plus-sign"></i> Add</button>
             {{/if}}
             </span>
           </div>
@@ -252,53 +266,53 @@
 
           {{#if n3}}
           <div class="span3 tree-elem tree-bot" data-id={{n3.id}}>
-            <h4>{{n3.head}}</h4>
-            <p>{{n3.desc}}</p>
+            <h4 class="node-head">{{n3.head}}</h4>
+            <p class="node-desc">{{n3.desc}}</p>
           </div>
           {{else}}
           <div class="span3 tree-elem tree-elem-empty tree-bot"
                data-id="3">
-            <h4>Edit to add question</h4>
-            <p>Edit to add a brief description</p>
+            <h4 class="node-head">Edit to add question</h4>
+            <p class="node-desc">Edit to add a brief description</p>
           </div>
           {{/if}}
 
           {{#if n4}}
           <div class="span3 tree-elem tree-bot" data-id={{n4.id}}>
-            <h4>{{n4.head}}</h4>
-            <p>{{n4.desc}}</p>
+            <h4 class="node-head">{{n4.head}}</h4>
+            <p class="node-desc">{{n4.desc}}</p>
           </div>
           {{else}}
           <div class="span3 tree-elem tree-elem-empty tree-bot"
                data-id="4">
-            <h4>Edit to add question</h4>
-            <p>Edit to add a brief description</p>
+            <h4 class="node-head">Edit to add question</h4>
+            <p class="node-desc">Edit to add a brief description</p>
           </div>
           {{/if}}
 
           {{#if n5}}
           <div class="span3 tree-elem tree-bot" data-id={{n5.id}}>
-            <h4>{{n5.head}}</h4>
-            <p>{{n5.desc}}</p>
+            <h4 class="node-head">{{n5.head}}</h4>
+            <p class="node-desc">{{n5.desc}}</p>
           </div>
           {{else}}
           <div class="span3 tree-elem tree-elem-empty tree-bot"
                data-id="5">
-            <h4>Edit to add question</h4>
-            <p>Edit to add a brief description</p>
+            <h4 class="node-head">Edit to add question</h4>
+            <p class="node-desc">Edit to add a brief description</p>
           </div>
           {{/if}}
 
           {{#if n6}}
           <div class="span3 tree-elem tree-bot" data-id={{n6.id}}>
-            <h4>{{n6.head}}</h4>
-            <p>{{n6.desc}}</p>
+            <h4 class="node-head">{{n6.head}}</h4>
+            <p class="node-desc">{{n6.desc}}</p>
           </div>
           {{else}}
           <div class="span3 tree-elem tree-elem-empty tree-bot"
                data-id="6">
-            <h4>Edit to add question</h4>
-            <p>Edit to add a brief description</p>
+            <h4 class="node-head">Edit to add question</h4>
+            <p class="node-desc">Edit to add a brief description</p>
           </div>
           {{/if}}
         </div>
@@ -415,6 +429,7 @@
     <script src="/js/backbone-min.js"></script>
 
     <script src="/js/handlebars.js"></script>
+    <script src="/js/holder.js"></script>
 
     <!-- <script src="/d3/d3.v3.js"></script> -->
     <script src="/js/bisect-main.js"></script>
