--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -55,12 +55,16 @@
 
       /* Inorg Specific CSS*/
 
+      [contenteditable]:hover:not(:focus) {
+        outline: 1px dotted;
+      }
+
       /* NestedTree Formatting */
       .ntree-elem {
         text-align:center;
         border-radius:3px;
         margin:4px 0px;
-        padding:2px 2px;
+        padding:4px;
       }
 
       /* Turn on Visibility */
@@ -80,7 +84,7 @@
         box-shadow: 3px 3px 3px #1c1c1c;
         border-radius:3px;
         margin-top:4px;
-        padding:2px 2px;
+        padding:4px;
         text-align:center;
       }
 
@@ -97,7 +101,6 @@
         background-color:#777;
       }
 
-      /* ******************************************************************* */
     </style>
     <link href="/bs/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -188,23 +191,27 @@
     <!-- Le templates
     ================================================== -->
     <script type="text/template" id="tmpl-tree">
+
       <div class="btn-toolbar">
         <button class="btn btn-small act-edit"><i class="icon-edit"></i> Edit</button>
         <div class="btn-group pull-right">
           <button class="btn btn-small act-save"><i class="icon-ok"></i> Save</button>
-          <button class="btn btn-small act-cancel"><i class="icon-ban-circle"></i> Cancel</button>
+          <button class="btn btn-small act-cancel"><i class="icon-remove"></i> Revert</button>
         </div>
       </div>
+      <p class="on-edit text-success">
+        <em>Select fields in decision tree and 'tap' or 'click' to edit them</em>
+      </p>
+
       <div id={{tree.id}} class="tree">
-        <h2>
-          <span class="label label-warning pull-right">Modified</span>
-          <span class="node-head">{{tree.head}} </span>
-          <small class="node-desc">{{tree.desc}}</small>
-        </h2>
+        <span class="label label-info pull-right"></span>
+        <h2 class="node-head">{{tree.head}}</h2>
+        <p class="node-desc">{{tree.desc}}</p>
 
         {{#with nodes}}
         <div class="row-fluid" data-height="0">
           <div class="span12 tree-elem tree-top" data-id={{n0.id}}>
+            <span class="label label-info pull-right"></span>
             <h4 class="node-head">{{n0.head}}</h4>
             <p class="node-desc">{{n0.desc}}</p>
           </div>
@@ -225,7 +232,7 @@
               </div>
             </div>
             -->
-            <span class="label label-warning pull-right">Modified</span>
+            <span class="label label-info pull-right"></span>
             <h4 class="node-head">{{n1.head}}</h4>
             <p class="node-desc">{{n1.desc}}</p>
             <span class="on-edit">
@@ -243,7 +250,7 @@
             </span>
           </div>
           <div class="span6 tree-elem tree-mid" data-id={{n2.id}}>
-            <span class="label label-warning pull-right"></span>
+            <span class="label label-info pull-right"></span>
             <h4 class="node-head">{{n2.head}}</h4>
             <p class="node-desc">{{n2.desc}}</p>
             <span class="on-edit">
@@ -363,13 +370,6 @@
     </script>
 
     <script type="text/template" id="tmpl-ntree">
-      <button class="btn btn-small pull-right"><i class="icon-edit"></i> Edit</button>
-      <!--
-      <div class="btn-group pull-right" data-toggle="buttons-checkbox">
-        <button class="btn btn-small disabled"><i class="icon-ok"></i> Save</button>
-        <button class="btn btn-small disabled"><i class="icon-remove"></i> Cancel</button>
-      </div>
-      -->
       <div id={{tree.id}} class="tree">
         <h2>
           <span>{{tree.head}} </span>
