Restore Add/Delete Text on buttons

--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -241,13 +241,13 @@
             <p class="node-desc">{{n1.desc}}</p>
             <span class="on-edit">
               <button class="btn btn-mini node-modify"
-                      data-add-text='<i class="icon-plus-sign"></i> '
-                      data-rem-text='<i class="icon-minus-sign"></i> '
+                      data-add-text='<i class="icon-plus-sign"></i> Add'
+                      data-rem-text='<i class="icon-minus-sign"></i> Delete'
                       >
                 {{#if n3}}
-                <i class="icon-minus-sign"></i>
+                <i class="icon-minus-sign"></i> Delete
                 {{else}}
-                <i class="icon-plus-sign"></i>
+                <i class="icon-plus-sign"></i> Add
                 {{/if}}
               </button>
             </span>
@@ -258,13 +258,13 @@
             <p class="node-desc">{{n2.desc}}</p>
             <span class="on-edit">
               <button class="btn btn-mini node-modify"
-                      data-add-text='<i class="icon-plus-sign"></i> '
-                      data-rem-text='<i class="icon-minus-sign"></i> '
+                      data-add-text='<i class="icon-plus-sign"></i> Add'
+                      data-rem-text='<i class="icon-minus-sign"></i> Delete'
                       >
                 {{#if n5}}
-                <i class="icon-minus-sign"></i>
+                <i class="icon-minus-sign"></i> Delete
                 {{else}}
-                <i class="icon-plus-sign"></i>
+                <i class="icon-plus-sign"></i> Add
                 {{/if}}
               </button>
             </span>
